NTP on iPad can be scrolled up to the fake omnibox

The height of the ContentSuggestions collection on NTP iPad is not
sufficient to allow the fake omnibox to be scrolled enough to be
hidden by the real toolbar.
This is particularly a problem when the omnibox is focused because
the collection is only half scrolled if the content is not high enough.

Bug: 766483
Change-Id: I00c2b6f7446e801dec56e19af28d139da42b8b1a
Reviewed-on: https://chromium-review.googlesource.com/671354
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Jean-François Geyelin <jif@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503080}