ios/chrome/browser/ui/content_suggestions/content_suggestions_layout.h
@@ -8,6 +8,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/third_party/material_components_ios/src/components/Collections/src/MDCCollectionViewFlowLayout.h"
 
+// Layout used for ContentSuggestions. It makes sure the collection is high
+// enough to be scrolled up to the point the fake omnibox is hidden.
 @interface ContentSuggestionsLayout : MDCCollectionViewFlowLayout
 
 @end
