ios/chrome/browser/ui/content_suggestions/content_suggestions_layout_handset.h
@@ -1,0 +1,17 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+// Copyright 2017 The Chromium Authors. All rights reserved.
+// Use of this source code is governed by a BSD-style license that can be
+// found in the LICENSE file.
+
+#ifndef IOS_CHROME_BROWSER_UI_CONTENT_SUGGESTIONS_CONTENT_SUGGESTIONS_LAYOUT_HANDSET_H_
+#define IOS_CHROME_BROWSER_UI_CONTENT_SUGGESTIONS_CONTENT_SUGGESTIONS_LAYOUT_HANDSET_H_
+
+#import "ios/chrome/browser/ui/content_suggestions/content_suggestions_layout.h"
+
+// Layout for ContentSuggestions on handset devices. This layout makes sure the
+// fake omnibox is pinned to the top of the collection.
+@interface ContentSuggestionsLayoutHandset : ContentSuggestionsLayout
+
+@end
+
+#endif  // IOS_CHROME_BROWSER_UI_CONTENT_SUGGESTIONS_CONTENT_SUGGESTIONS_LAYOUT_HANDSET_H_
